12/18/12
	Development begins.