@@ -1,2 +1,5 @@
-12/18/12
-	Development begins.
+12/19/12:
+	Code for detecting if interface MAC is changing
+
+12/18/12:
+	Development begins
